coalition parser via graphql (#87) (#88)
Co-authored-by: openmike <muxaujish@gmail.com>